# termchat

./: .env.example  .gitignore  README.md  pyproject.toml
termchat/: client.py  config.py  deepsearch.py  history.py  main.py  search.py
